--- a/OurTime/index.html
+++ b/OurTime/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
+  <div>
+    <h1 class="title">Together</h1>
+    <div class="time-together">
+      <span><span id="togetherDay">00</span>天</span>
+      <strong><span id="togetherHour">00</span>时</strong>
+      <strong><span id="togetherMinute">00</span>分</strong>
+      <strong><span id="togetherSecond">00</span>秒</strong>
+    </div>
+  </div>
   <h1 class="title">距离一周年，还有</h1>
   <div class="time-item">
     <span><span id="day">00</span>天</span>
@@ -19,31 +28,44 @@
   <script>
     // 目标时间
     var endDate = new Date('2019-04-22 21:02:00');
-
+    var startDate = new Date('2018-04-22 21:02:00');
     // 获取span
+    var spantogetherDay = my$('togetherDay');
+    var spantogetherHour = my$('togetherHour');
+    var spantogetherMinute = my$('togetherMinute');
+    var spantogetherSecond = my$('togetherSecond');
+
     var spanDay = my$('day');
-    var spanHour = my$('hour');
-    var spanMinute = my$('minute');
-    var spanSecond = my$('second');
-
-    setInterval(countdown, 1000);
-
+     var spanHour = my$('hour');
+     var spanMinute = my$('minute');
+     var spanSecond = my$('second');
+    setInterval(countdown, 100);
+    setInterval(countdownTogether, 100);
     countdown();
+    countdownTogether();
     // 倒计时
     function countdown() {
-
       // 计算时间差
       // 当前时间
       var startDate = new Date();
       // 计算两个日期差
       var interval = getInterval(startDate, endDate);
-
       setInnerText(spanDay, interval.day);
       setInnerText(spanHour, interval.hour);
       setInnerText(spanMinute, interval.minute);
       setInnerText(spanSecond, interval.second);
-
     }
+    function countdownTogether() {
+        // 计算时间差
+        // 当前时间
+        var endDate = new Date();
+        // 计算两个日期差
+        var interval = getInterval(startDate, endDate);
+        setInnerText(spantogetherDay, interval.day);
+        setInnerText(spantogetherHour, interval.hour);
+        setInnerText(spantogetherMinute, interval.minute);
+        setInnerText(spantogetherSecond, interval.second);
+      }
   </script>
 </body>
 </html>
