--- a/OurTime/index.html
+++ b/OurTime/index.html
@@ -4,68 +4,33 @@
 <head>
   <meta charset="UTF-8">
   <title>YinHui & ChenLingLing</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-  <div>
+  <div class="dateTime w">
+  <div class="time-box">
     <h1 class="title">Together</h1>
-    <div class="time-together">
-      <span><span id="togetherDay">00</span>天</span>
+    <div class="time-item">
+      <p><strong><span id="togetherDay">00</span>天</strong></p>
+      <br>
       <strong><span id="togetherHour">00</span>时</strong>
       <strong><span id="togetherMinute">00</span>分</strong>
       <strong><span id="togetherSecond">00</span>秒</strong>
     </div>
   </div>
-  <h1 class="title">距离一周年，还有</h1>
-  <div class="time-item">
-    <span><span id="day">00</span>天</span>
-    <strong><span id="hour">00</span>时</strong>
-    <strong><span id="minute">00</span>分</strong>
-    <strong><span id="second">00</span>秒</strong>
+  <div class="time-box">
+    <h1 class="title">距离一周年，还有</h1>
+      <div class="time-item">
+        <p><strong><span id="day">00</span>天</strong></p>
+        <br>
+        <strong><span id="hour">00</span>时</strong>
+        <strong><span id="minute">00</span>分</strong>
+        <strong><span id="second">00</span>秒</strong>
+      </div>
   </div>
-
-  <script src="common.js"></script>
-  <script>
-    // 目标时间
-    var endDate = new Date('2019-04-22 21:02:00');
-    var startDate = new Date('2018-04-22 21:02:00');
-    // 获取span
-    var spantogetherDay = my$('togetherDay');
-    var spantogetherHour = my$('togetherHour');
-    var spantogetherMinute = my$('togetherMinute');
-    var spantogetherSecond = my$('togetherSecond');
-
-    var spanDay = my$('day');
-     var spanHour = my$('hour');
-     var spanMinute = my$('minute');
-     var spanSecond = my$('second');
-    setInterval(countdown, 100);
-    setInterval(countdownTogether, 100);
-    countdown();
-    countdownTogether();
-    // 倒计时
-    function countdown() {
-      // 计算时间差
-      // 当前时间
-      var startDate = new Date();
-      // 计算两个日期差
-      var interval = getInterval(startDate, endDate);
-      setInnerText(spanDay, interval.day);
-      setInnerText(spanHour, interval.hour);
-      setInnerText(spanMinute, interval.minute);
-      setInnerText(spanSecond, interval.second);
-    }
-    function countdownTogether() {
-        // 计算时间差
-        // 当前时间
-        var endDate = new Date();
-        // 计算两个日期差
-        var interval = getInterval(startDate, endDate);
-        setInnerText(spantogetherDay, interval.day);
-        setInnerText(spantogetherHour, interval.hour);
-        setInnerText(spantogetherMinute, interval.minute);
-        setInnerText(spantogetherSecond, interval.second);
-      }
-  </script>
+  </div>
+  <script src="js/common.js"></script>
+  <script src="js/index.js"></script>
 </body>
 </html>
